<resources>
    <string name="app_name">The Verge</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="no_network">Not connected to a network</string>
    <string name="refresh">Refresh</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_a_url">Enter a url</string>
    <string name="open_drawer_xs">Open drawer</string>
    <string name="close_drawer_xs">Close drawer</string>
    <string name="home">Home</string>
    <string name="longform">Longform</string>
    <string name="reviews">Reviews</string>
    <string name="video">Video</string>
    <string name="tech">Tech</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="transportation">Transportation</string>
    <string name="design">Design</string>
    <string name="us_and_world">US &amp; World</string>
    <string name="search">Search</string>
    <string name="no_connection_established">No connection established</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="tag_ellipses">Tag…</string>
    <string name="enter_tag_name">Enter tag name</string>
    <string name="tag_name_error">There is no tag named \"%s\".</string>
    <string name="tag">Tag</string>
    <string name="tag_activity_title">Tag: %s</string>
    <string name="search_result_activity_title">Search: %s</string>
    <string name="try_again">Try again</string>
    <string name="email">Email</string>
    <string name="author_info">Author info</string>
    <string name="view_in_browser">View in browser</string>
    <string name="copy_url">Copy URL</string>
    <string name="preference_use_article_viewer_title">Open articles in article viewer (beta)</string>
    <string name="preference_use_article_viewer_on">Now opening in article viewer (beta)</string>
    <string name="preference_use_article_viewer_off">Now opening in browser view</string>
</resources>
